# darker

./: README.rst  pyproject.toml
src/darker/: fstring.py
