[build-system]
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel"]  # PEP 508 specifications.

[tool.black]
skip-string-normalization = false
target-version = ["py311"]

[tool.isort]
profile = "black"
known_third_party = ["pytest"]

[tool.darker]
src = [
    "action",
    "src",
]
revision = "origin/master..."

[tool.ruff]
select = ["ALL"]
ignore = [
    "A002",  # builtin-argument-shadowing
    "ANN101",  # missing-type-self
    "D203",  # one-blank-line-before-class
    "D213",  # multi-line-summary-second-line
]
target-version = ["py38"]
